--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,198 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# FreeCAD specific
+*.FCStd
+*.FCStd1
+*.FCBak
+*.FCStd~
+*.autosave
+
+# IDE specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS specific files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+
+# Test output
+test_output/
+*.log
+*_output.txt
+
+# Documentation build
+docs/.buildinfo
+docs/.doctrees/
+
+# Coverage reports
+htmlcov/
+.coverage
+
+# Project specific
+freecad_mcp_cursor.json
+project_files_list.txt
+TEST_ASSEMBLY3_FORMATS.json
+
+# Temporary scripts (keep scripts/ folder but ignore temp files)
+scripts/temp_*.py
+scripts/test_*.py
+scripts/debug_*.py
+
+# Documentation temporary files (keep essential docs)
+*_TEMP.md
+*_OLD.md
+*_BACKUP.md
+DEBUG_*.md
+BUGFIX*.md
+PLAN_*.md
+VALIDATION_*.md
+ORIGINAL_FILES_REFERENCE.md
+ajout_mcp_*.md
+creation_solid_macro_freecad.py
+
+# Keep essential documentation
+!README.md
+!CONTRIBUTING.md
+!CHANGELOG.md
+!LICENSE
+!docs/
+
+# Test temporary outputs
+tests/*_output.txt
+tests/temp_*.py
+
+# UV lock file (optional depending on preference)
+# uv.lock
+
