--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = { text = "MIT" }
 requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.12.2",
+    "validators>=0.34.0",
 ]
 
 [project.scripts]
